name:           pfVisualizer
version:        0.1.1.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Miguel Negrao

executable pfVisualizer
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   GLUT,
                   OpenGL,
                   containers,
                   hosc >= 0.14,
                   split,
                   random,
                   stm >= 2.4,
                   safe,
                   lens

  ghc-options:     -Wall -threaded -rtsopts
